<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/app_bar"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appbar"
        android:padding="10dp"
        android:background="?attr/CalBckColor">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right|bottom"
        android:textSize="30dp"
        android:text=""
        android:textColor="@color/White"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="70dp"
        android:gravity="right|top"
        android:textColor="@color/textColor"
        android:text=""
        android:autoSizeTextType="uniform"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/relativeLayout"
        android:background="?attr/keyBack"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shift"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/shift"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/sin"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/sin1"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/cos"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/cos1"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tan"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/tan1"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/log"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/log1"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mode"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/mode2"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/pie"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/pie"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/square"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/square"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/square_root"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/square_root"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pow"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/pow"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/factorial"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/factorial"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <TextView
                android:id="@+id/erase"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/erase"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <TextView
                android:id="@+id/backspace"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/backspace"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/seven"
                android:textColor="@color/Grey"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/eight"
                android:textColor="@color/Grey"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/nine"
                android:textColor="@color/Grey"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/left_parentheses"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/left_parentheses"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/right_parentheses"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/right_parentheses"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/four"
                android:textColor="@color/Grey"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/five"
                android:textColor="@color/Grey"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/six"
                android:textColor="@color/Grey"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/multiply"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <TextView
                android:id="@+id/divide"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/divide"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/one"
                android:textColor="@color/Grey"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/two"
                android:textColor="@color/Grey"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/three"
                android:textColor="@color/Grey"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/plus"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/subtract"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/subtract"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dot"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/dot"
                android:textColor="@color/Grey"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/zero"
                android:textColor="@color/Grey"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/answer"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/answer"
                android:textColor="@color/Grey"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <TextView
                android:id="@+id/change_sign"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/change_sign"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/equals"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/equals"
                android:textStyle="bold"
                android:textColor="@color/CalcText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>